# python-template-vscode

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .roomodes  CONTRIBUTING.md  README.md  coverage.xml  error-logging-plan.md  pyproject.toml  pyproject.toml.bak
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
docs/: capabilities.md  cleanup-task-plan.md  cleanup-task-update.md  package-management.md
memory-bank/: activeContext.md  decisionLog.md  github-workflow-template.yml  progress.md  systemPatterns.md  vscode-profile-setup.md
misc/: README.md  universal-logger-plan.md  vscode-error-logger.js  vscode-error-logger.test.js
scripts/: configure.cmd  setup-env.cmd  setup-env.sh  setup-project.cmd  setup-project.sh  setup-roo.sh
src/project_template/: __init__.py  example.py
tests/: jest.config.js  jest.setup.js  package-lock.json  package.json  test_example.py
tests/coverage/: clover.xml  coverage-final.json  lcov.info
tests/coverage/lcov-report/: browser-helper.js.html  index.html
